--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+.env
+src/app/environments/environments.ts
+
 # Compiled output
 /dist
 /tmp
